# mpc-curvy

./: Cargo.toml  README.md
src/: lib.rs
src/off_chain/: protocol.rs  recipient.rs  sender.rs  utils.rs
src/off_chain/network/: setup.rs  sink.rs  stream.rs
src/off_chain/protocol/: mpc.rs
src/on_chain/cli/: main.rs
src/tests/: mpc_tests.rs  sap_tests.rs
